feat(logging): add structured logging with Serilog

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,13 @@ Thumbs.db
 # EF Core
 #####################################
 
-Migrations/*Designer.cs
 *.db
+
+#####################################
+# Test results
+#####################################
+
+TestResults/
 
 #####################################
 # Node (if ever added later)
