refactor: reset migrations and standardize schema in snake case

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5433:5432" # avoids conflict with local Postgres
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   api:
     build:
@@ -18,7 +23,8 @@ services:
       dockerfile: RetailInventory.Api/Dockerfile
     container_name: retail_inventory_api
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DefaultConnection: Host=postgres;Port=5432;Database=retail_inventory;Username=postgres;Password=postgres
